# cpp_project_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py
.github/actions/setup-linux/: action.yml
.github/workflows/: build-linux.yml
cmake/: cache.cmake  compiler_warning.cmake  conan.cmake  prevent_in_source_build.cmake  project_settings.cmake  sanitizers.cmake  static_analyzers.cmake
conan/profiles/: linux_makefiles_clang  linux_makefiles_gcc  linux_ninja_clang  linux_ninja_gcc
scripts/: clang-format.sh  run_conan.sh
src/: CMakeLists.txt
src/cpptemp/: CMakeLists.txt
src/cpptemp/include/cpptemp/: say_hello.hpp
src/cpptemp/src/: say_hello.cpp
src/mylib/: CMakeLists.txt
src/mylib/src/: say_hello.cpp
